Use absolute URL for logout service URLs
Unlike other staging servers (including the test), staging 1 has a
bug where CAS redirects the logout flow to 127.0.0.1 if a relative
URL is used as the service URL. Although this is a DevOps issue,
the current fix is to use absolute URLs for all logout service URLs
in all templates.

In order for the ThymeLeaf templates to access "cas.server.name" in
"cas.properties", a bean must be registered at the Spring Application
Context. The current fix only give templates the full CAS login URL.

This solution has also made it possible to solve the server-specific
URLs issue properly rather than splitting OSF-aware/unaware flows,
which will be a future improvement.

--- a/src/main/resources/templates/casServiceErrorView.html
+++ b/src/main/resources/templates/casServiceErrorView.html
@@ -27,7 +27,7 @@
                     <h2 th:utext="#{screen.service.error.heading}"></h2>
                     <p th:if="${rootCauseException != null and rootCauseException.code != null}" th:utext="#{${rootCauseException.code}}"></p>
                 </section>
-                <section class="form-button" th:with="loginUrl=@{/login(casRedirectSource=cas)}">
+                <section class="form-button" th:with="loginUrl=@{${@casServerLoginUrl}(casRedirectSource=cas)}">
                     <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=${loginUrl})}">
                         <span class="mdc-button__label" th:utext="#{screen.error.page.loginagain}"></span>
                     </a>
