--- a/src/main/resources/templates/casLogoutView.html
+++ b/src/main/resources/templates/casLogoutView.html
@@ -33,7 +33,7 @@
                     </a>
                 </section>
                 <hr class="my-4" />
-                <section class="text-with-mdi" th:with="loginUrl=@{/login(casRedirectSource=cas)}">
+                <section class="text-with-mdi">
                     <span><a th:href="@{/login(casRedirectSource=cas)}" th:utext="#{screen.generic.logoutsuccess.link.login}"></a></span>
                 </section>
             </section>
