Fix cord and okstate login URL on the FE template

--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -93,11 +93,11 @@
                     }
                     if (institutionLoginUrl === "okstate") {
                         /*<![CDATA[*/
-                            institutionLoginUrl = /*[[${okstateUrl}]]*/ '';
+                            institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('okstate')}]]*/ '';
                         /*]]>*/
                     } else if (institutionLoginUrl === "cord") {
                         /*<![CDATA[*/
-                            institutionLoginUrl = /*[[${cordUrl}]]*/ '';
+                            institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('cord')}]]*/ '';
                         /*]]>*/
                     } else if (institutionLoginUrl === "fakecas") {
                         /*<![CDATA[*/
