--- a/src/main/resources/templates/casPac4jStopWebflow.html
+++ b/src/main/resources/templates/casPac4jStopWebflow.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layoutosf}">
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{screen.pac4j.unauthz.pagetitle}">Pac4j Stop Webflow View</title>
+    <title th:text="#{screen.pac4j.error.title}">Pac4j Stop Webflow View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
-<body>
-<main role="main" class="container mt-3 mb-3">
-    <div layout:fragment="content" class="banner banner-danger mdc-card p-4 m-auto w-lg-66">
-        <div class="">
-            <h2 th:utext="#{screen.pac4j.unauthz.heading}">Unauthorized Access</h2>
-            <p th:utext="#{screen.pac4j.unauthz.message}">Either the authentication request was rejected/cancelled,
-                or
-                the authentication provider denied access due to permissions, etc. Review logs to find the root
-                cause of
-                the issue.</p>
+<body class="mdc-typography">
+<div layout:fragment="content" class="d-flex justify-content-center">
 
-            <div class="mdc-data-table">
-                <table th:if="${error != null or reason != null or code != null or description != null}"
-                       class="mdc-data-table__table w-100" aria-label="Error information">
-                    <thead>
-                    <tr class="mdc-data-table__header-row">
-                        <th class="mdc-data-table__header-cell">Error</th>
-                        <th class="mdc-data-table__header-cell">Reason</th>
-                        <th class="mdc-data-table__header-cell">Code</th>
-                        <th class="mdc-data-table__header-cell">Description</th>
-                        <th class="mdc-data-table__header-cell">Provider</th>
-                        <th class="mdc-data-table__header-cell">Destination</th>
-                    </tr>
-                    </thead>
-                    <tbody class="mdc-data-table__content">
-                    <tr class="mdc-data-table__row">
-                        <td class="mdc-data-table__cell" th:text="${error}">Error</td>
-                        <td class="mdc-data-table__cell" th:text="${reason}">reason</td>
-                        <td class="mdc-data-table__cell" th:text="${code}">code</td>
-                        <td class="mdc-data-table__cell" th:text="${description}">description</td>
-                        <td class="mdc-data-table__cell" th:text="${client}">client</td>
-                        <td class="mdc-data-table__cell">
-                            <a th:href="${service}" th:text="#{screen.pac4j.unauthz.gotoapp}">Goto
-                                Application</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="d-flex">
-            <a class="mdc-button mdc-button--raised mr-2" th:href="@{/login}">
-                <span class="mdc-button__label" th:text="#{screen.pac4j.unauthz.login}">Back to CAS</span>
-            </a>
-            <a class="mdc-button mdc-button--outlined" th:href="${service}">
-                <span class="mdc-button__label" th:text="#{screen.pac4j.unauthz.gotoapp}">Goto Application</span>
-            </a>
-        </div>
+    <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content w-lg-30">
+        <section class="login-error-card">
+            <section>
+                <div th:replace="fragments/osfbannerui :: osfBannerUI">
+                    <a href="fragments/osfbannerui.html"></a>
+                </div>
+            </section>
+            <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
+                <span th:utext="#{screen.authnerror.tips}"></span>
+            </section>
+            <hr class="my-4" />
+            <section class="card-message">
+                <h2 th:utext="#{screen.pac4j.error.heading}"></h2>
+                <p th:utext="#{screen.pac4j.error.message}"></p>
+            </section>
+            <section id="errorInfo" class="pre-formatted-small word-break-all">
+                <pre id="initiatorUrl"></pre>
+                <pre th:if="${rootCauseException}" th:text="${'Error: ' + rootCauseException.getClass().getSimpleName()}"></pre>
+                <pre th:if="${rootCauseException}" th:text="${'Message: ' + rootCauseException.getMessage()}"></pre>
+                <pre th:if="${service}" th:text="${'Service: ' + service}"></pre>
+                <pre th:utext="${'Timestamp: ' + #dates.formatISO(#dates.createNow())}"></pre>
+            </section>
+            <section class="form-button" th:with="loginUrl=@{${@casServerLoginUrl}(casRedirectSource=cas)}">
+                <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=${loginUrl})}">
+                    <span class="mdc-button__label" th:utext="#{screen.error.page.loginagain}"></span>
+                </a>
+            </section>
+            <hr class="my-4" />
+            <section class="text-with-mdi">
+                <span><a th:href="@{/logout(service=${osfUrl.logout})}" th:utext="#{screen.authnerror.button.backtoosf}"></a></span>
+            </section>
+        </section>
     </div>
-</main>
+
+    <script type="text/javascript">
+        disableSignUpButton();
+        document.getElementById("initiatorUrl").innerHTML = "Request URL: " + window.location.href;
+    </script>
+
+</div>
 </body>
 
 </html>
