A11y fix for the main login page (4 issues)
* Added the alt attribute for img tags
* Fixed the label tag for password input
* Set auto-complete to new-password for password input
* Add lang="en-us" to the html tag

--- a/src/main/resources/templates/fragments/osfbannerui.html
+++ b/src/main/resources/templates/fragments/osfbannerui.html
@@ -13,7 +13,7 @@
 <body>
     <main role="main" class="container mt-3 mb-3">
         <div th:fragment="osfBannerUI" id="osfbannerui" class="mb-4 service-ui text-center">
-            <img id="servicelogo" class="service-ui-logo" src="/images/osf-banner.png" />
+            <img id="servicelogo" class="service-ui-logo" src="/images/osf-banner.png" alt="OSF banner image in the main form"/>
         </div>
     </main>
 </body>
