A11y fix for CAS pages - 2A and 2AA
* Pages covered
  * Username/password login page
  * Two-factor authentication page
  * Terms-of-service consent page
  * Institution SSO pages
  * OAuth pages
  * Exception pages

* Issues fixed
  * Added the alt attribute for img tags
  * Fixed the label tag for password inputs
  * Replace span tags with label for select form
  * Set auto-complete to new-password for password inputs
  * Remove auto-complete for email inputs
  * Added lang="en-us" to the html tag
  * Hide "disabled" sign-up button-like div

* By-product
  * Fixed an existing bug with non-OSF header

--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -37,8 +37,8 @@
                     </section>
 
                     <section class="text-with-mdi text-bold text-large">
-                        <span th:unless=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.heading.select}"></span>
-                        <span th:if=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.heading.auto}"></span>
+                        <label for="institutionSelect" th:unless=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.heading.select}"></label>
+                        <label for="institutionSelect" th:if=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.heading.auto}"></label>
                     </section>
 
                     <section class="instn-select">
