--- a/src/main/resources/templates/casUnsupportedInstitutionLoginView.html
+++ b/src/main/resources/templates/casUnsupportedInstitutionLoginView.html
@@ -65,8 +65,7 @@
                                        size="256"
                                        type="email"
                                        name="forgot_password-email"
-                                       th:accesskey="#{screen.unsupp-instn.existing.setpw.label.email.accesskey}"
-                                       autocomplete="off" />
+                                       th:accesskey="#{screen.unsupp-instn.existing.setpw.label.email.accesskey}" />
                                 <label for="username" class="mdc-floating-label" th:utext="#{screen.unsupp-instn.existing.setpw.label.email}"></label>
                             </div>
                         </section>
