--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -19,7 +19,7 @@
                             <tbody>
                             <tr>
                                 <td>
-                                    <img class="service-ui-logo" src="/images/osf-logo.png">
+                                    <img class="service-ui-logo" src="/images/osf-logo.png" alt="OSF logo">
                                 </td>
                                 <td>
                                     <span class="service-ui-name hidden-narrow">OSF </span>
