--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
 
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
                     <span class="cas-brand mx-auto" >
-                        <img class="cas-logo" src="/images/osf-logo-white.png" alt="OSF logo image in the top navigation bar">
+                        <img class="cas-logo" src="/images/osf-logo-white.png" alt="OSF logo">
                     </span>
                     <div class="cas-brand-text">
                         <a class="navbar-link" th:href="@{/login(casRedirectSource=tomcat)}">
