--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -28,11 +28,11 @@
 
             <section class="form-button-inline" th:if="${osfCasLoginContext.orcidLoginUrl}">
                 <a class="mdc-button mdc-button--raised button-osf-grey" id="orcidlogin" th:href="@{${osfCasLoginContext.orcidLoginUrl}}">
-                    <img class="delegation-button-logo" src="/images/orcid-logo.png" alt="ORCiD logo image for the sign-in-with-orcid button">
+                    <img class="delegation-button-logo" src="/images/orcid-logo.png" alt="ORCiD logo">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.orcidlogin}"></span>
                 </a>
                 <a class="mdc-button mdc-button--raised button-osf-grey" id="instnLogin" th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}">
-                    <img class="delegation-button-logo" src="/images/institution-logo.png" alt="Institution logo image for the sign-in-via-orcid button">
+                    <img class="delegation-button-logo" src="/images/institution-logo.png" alt="Institution logo">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.institutionlogin}"></span>
                 </a>
             </section>
