--- a/src/main/resources/templates/fragments/osfbannerui.html
+++ b/src/main/resources/templates/fragments/osfbannerui.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main role="main" class="container mt-3 mb-3">
+    <main class="container mt-3 mb-3">
         <div th:fragment="osfBannerUI" id="osfbannerui" class="mb-4 service-ui text-center">
             <img id="servicelogo" class="service-ui-logo" src="/images/osf-banner.png" alt="OSF banner"/>
         </div>
