--- a/src/main/resources/templates/fragments/submitbutton.html
+++ b/src/main/resources/templates/fragments/submitbutton.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main role="main" class="container mt-3 mb-3">
+    <main class="container mt-3 mb-3">
         <div class="form-button" th:fragment="submitButton (buttonDisabled, buttonCustomization, messageKey)">
             <button
                     class="mdc-button mdc-button--raised"
