--- a/src/main/resources/templates/fragments/tosloginform.html
+++ b/src/main/resources/templates/fragments/tosloginform.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main role="main" class="container mt-3 mb-3">
+    <main class="container mt-3 mb-3">
 
         <!-- Terms of service consent check login form template begins here -->
         <div th:fragment="tosloginform" class="d-flex flex-column justify-content-between m-auto">
