--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,7 +28,7 @@
     <div class="mdc-drawer-scrim"></div>
 
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center">
-        <main role="main" id="main-content" class="container-lg py-4">
+        <main id="main-content" class="container-lg py-4">
             <div layout:fragment="content" id="content">
             </div>
         </main>
