--- a/src/main/resources/templates/protocol/oauth/confirm.html
+++ b/src/main/resources/templates/protocol/oauth/confirm.html
@@ -21,10 +21,8 @@
                 </section>
                 <hr class="my-4" />
                 <section class="card-message">
-                    <h1></h1>
-                    <h2 th:text="#{screen.oauth.confirm.header}" />
-                    <h3></h3>
-                    <h4 th:text="#{screen.oauth.confirm.message}" />
+                    <h1 th:text="#{screen.oauth.confirm.header}" />
+                    <h2 class="downsize-to-h3" th:text="#{screen.oauth.confirm.message}" />
                     <p th:text="#{screen.oauth.confirm.service(${serviceName})}" />
                     <p th:text="#{screen.oauth.confirm.description(${serviceDescription})}" />
                     <p th:text="#{screen.oauth.confirm.scopes(${scope})}" />
