--- a/src/main/resources/templates/fragments/totploginform.html
+++ b/src/main/resources/templates/fragments/totploginform.html
@@ -80,7 +80,7 @@
                                     maxlength="6"
                                     th:accesskey="#{screen.twofactor.label.onetimepassword.accesskey}"
                                     th:field="*{oneTimePassword}"
-                                    autocomplete="new-password"
+                                    autocomplete="one-time-code"
                                     autofocus />
                                 <label for="oneTimePassword" class="mdc-floating-label" th:utext="#{screen.twofactor.label.onetimepassword}"></label>
                             </div>
