Support institution of which SSO and affliation is done via ORCiD

--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -99,10 +99,12 @@
                         /*<![CDATA[*/
                             institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('cord')}]]*/ '';
                         /*]]>*/
-                    } else if (institutionLoginUrl === "fakecas") {
+                    } else if (institutionLoginUrl === "fake-cas-type-5") {
                         /*<![CDATA[*/
-                            institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('fakecas')}]]*/ '';
+                        institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('fake-cas-type-5')}]]*/ '';
                         /*]]>*/
+                    } else if (institutionLoginUrl === "via-orcid") {
+                        institutionLoginUrl = /*[[${osfCasLoginContext.orcidLoginUrl}]]*/ ''
                     } else {
                         let lastIndexOfHash = institutionLoginUrl.lastIndexOf("#");
                         if (lastIndexOfHash >= 0) {
