Update instn id for fakecas & fix indentaion

--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -99,9 +99,9 @@
                         /*<![CDATA[*/
                             institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('cord')}]]*/ '';
                         /*]]>*/
-                    } else if (institutionLoginUrl === "fake-cas-type-5") {
+                    } else if (institutionLoginUrl === "osftype0") {
                         /*<![CDATA[*/
-                        institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('fake-cas-type-5')}]]*/ '';
+                            institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('osftype0')}]]*/ '';
                         /*]]>*/
                     } else if (institutionLoginUrl === "via-orcid") {
                         institutionLoginUrl = /*[[${osfCasLoginContext.orcidLoginUrl}]]*/ ''
