Migrate OKState SSO from CAS to SAML

--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -91,11 +91,7 @@
                         submitButton.style.backgroundColor = "#efefef";
                         return;
                     }
-                    if (institutionLoginUrl === "okstate") {
-                        /*<![CDATA[*/
-                            institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('okstate')}]]*/ '';
-                        /*]]>*/
-                    } else if (institutionLoginUrl === "cord") {
+                    if (institutionLoginUrl === "cord") {
                         /*<![CDATA[*/
                             institutionLoginUrl = /*[[${pac4jInstnLoginUrls.get('cord')}]]*/ '';
                         /*]]>*/
