--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,16 +27,17 @@
 
     <div class="mdc-drawer-scrim"></div>
 
-    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center">
-        <main id="main-content" class="container-lg py-4">
+    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center flex-grow-1">
+        <main id="main-content" class="container-lg py-4 flex-grow-1">
             <div layout:fragment="content" id="content">
             </div>
         </main>
+
+        <div th:replace="fragments/footer :: footer">
+            <a href="fragments/footer.html"></a>
+        </div>
     </div>
 
-    <div th:replace="fragments/footer :: footer">
-        <a href="fragments/footer.html"></a>
-    </div>
 </body>
 
 </html>
