Update layouts to use new leftpane

--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -25,6 +25,10 @@
         <a href="fragments/headerosf.html"></a>
     </div>
 
+    <div th:replace="fragments/leftpane :: leftpane">
+        <a href="fragments/leftpane.html"></a>
+    </div>
+
     <div class="mdc-drawer-scrim"></div>
 
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center flex-grow-1">
