--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -31,7 +31,7 @@
 
     <div class="mdc-drawer-scrim"></div>
 
-    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center flex-grow-1">
+    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
         <main id="main-content" class="container-lg py-4 flex-grow-1">
             <div layout:fragment="content" id="content">
             </div>
