--- a/src/main/resources/templates/fragments/headerosf.html
+++ b/src/main/resources/templates/fragments/headerosf.html
@@ -16,14 +16,13 @@
         <header id="app-bar" class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-elevation--z4">
             <nav class="mdc-top-app-bar__row">
 
-                <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
+                <section class="mdc-top-app-bar__section">
                     <span class="cas-brand mx-auto" >
                         <img class="cas-logo" src="/images/osf-logo-white.png" alt="OSF logo">
                     </span>
                     <div class="cas-brand-text">
                         <a class="navbar-link" th:href="@{${osfUrl.home}}">
                             <span class="cas-brand-name hidden-narrow" >OSF </span>
-                            <span class="cas-brand-name" >HOME</span>
                         </a>
                     </div>
                 </section>
@@ -36,29 +35,76 @@
                     </div>
                 </section>
 
-                <!-- TODO: hide and replace with hamburger menu -->
-                <input type="checkbox" id="toggle-leftnav" class="toggle-nav-input" />
-                <label for="toggle-leftnav" class="toggle-nav-label" th:utext="#{cas.header.togglenav}"></label>
+                <input type="checkbox" id="toggle-leftnav" class="toggle-nav-input" aria-controls='slideout-nav' hidden/>
+                <label for="toggle-leftnav" class="toggle-nav-label" aria-label="Toggle navigation menu">
+                    <img src="/images/menu.svg" alt="Toggle navigation menu">
+                </label>
 
                 <!-- Replace with LeftPane fragment? -->
-                <aside class="left-pane slideout cas-brand-text">
+                <aside id="slideout-nav" class="left-pane slideout cas-brand-text">
                     <nav class="left-pane-nav">
-                        <!-- TODO: Icons for each item -->
                         <ul class="left-pane-nav-list">
                             <!-- Home, Search, and Support Links -->
-                            <li><a class="navbar-link" th:href="@{/home}">Home</a></li>
-                            <li><a class="navbar-link" th:href="@{/search}">Search</a></li>
-                            <li><a class="navbar-link" th:href="@{/support}">Support</a></li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/home}">
+                                    <img src="/images/home.svg" alt="Home">
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/search}">
+                                    <img src="/images/search.svg" alt="Search">
+                                    Search
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/support}">
+                                    <img src="/images/support.svg" alt="Support">
+                                    Support
+                                </a>
+                            </li>
                             <br>
                             <!-- Registries, Preprints, Institutions, Collections, and Meetings -->
-                            <li><a class="navbar-link" th:href="@{/registries}">Registries</a></li>
-                            <li><a class="navbar-link" th:href="@{/preprints}">Preprints</a></li>
-                            <li><a class="navbar-link" th:href="@{/institutions}">Institutions</a></li>
-                            <li><a class="navbar-link" th:href="@{/collections}">Collections</a></li>
-                            <li><a class="navbar-link" th:href="@{/meetings}">Meetings</a></li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/registries}">
+                                    <img src="/images/registries.svg" alt="Registries">
+                                    Registries
+                                    <img class="arrow-icon" src="/images/arrow.svg" alt="Arrow">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/preprints}">
+                                    <img src="/images/preprints.svg" alt="Preprints">
+                                    Preprints
+                                    <img class="arrow-icon" src="/images/arrow.svg" alt="Arrow">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/institutions}">
+                                    <img src="/images/institutions.svg" alt="Institutions">
+                                    Institutions
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/collections}">
+                                    <img src="/images/collections.svg" alt="Collections">
+                                    Collections
+                                </a>
+                            </li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/meetings}">
+                                    <img src="/images/meetings.svg" alt="Meetings">
+                                    Meetings
+                                </a>
+                            </li>
                             <br>
                             <!-- Donate -->
-                            <li><a class="navbar-link" th:href="@{/donate}">Donate</a></li>
+                            <li>
+                                <a class="navbar-link" th:href="@{/donate}">
+                                    <img src="/images/donate.svg" alt="Donate">
+                                    Donate
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </aside>
