--- a/src/main/resources/templates/fragments/headerosf.html
+++ b/src/main/resources/templates/fragments/headerosf.html
@@ -63,7 +63,7 @@
                                 </a>
                             </li>
                             <br>
-                            <!-- Registries, Preprints, Institutions, Collections, and Meetings -->
+                            <!-- Registries, Preprints, Institutions, and Meetings -->
                             <li>
                                 <a class="navbar-link" th:href="@{${osfUrl.registries}}">
                                     <img src="/images/registries.svg" alt="Registries">
@@ -82,12 +82,6 @@
                                 <a class="navbar-link" th:href="@{${osfUrl.institutionsHome}}">
                                     <img src="/images/institutions.svg" alt="Institutions">
                                     Institutions
-                                </a>
-                            </li>
-                            <li>
-                                <a class="navbar-link" th:href="@{${osfUrl.collections}}">
-                                    <img src="/images/collections.svg" alt="Collections">
-                                    Collections
                                 </a>
                             </li>
                             <li>
