Use static osf logo; remove link

--- a/src/main/resources/templates/fragments/headerosf.html
+++ b/src/main/resources/templates/fragments/headerosf.html
@@ -18,13 +18,8 @@
 
                 <section class="mdc-top-app-bar__section">
                     <span class="cas-brand mx-auto" >
-                        <img class="cas-logo" src="/images/osf-logo-white.png" alt="OSF logo">
+                        <img class="cas-logo" src="/images/osf-logo-white.svg" alt="OSF logo">
                     </span>
-                    <div class="cas-brand-text">
-                        <a class="navbar-link" th:href="@{${osfUrl.home}}">
-                            <span class="cas-brand-name hidden-narrow" >OSF </span>
-                        </a>
-                    </div>
                 </section>
 
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
