--- a/src/main/resources/templates/fragments/leftpane.html
+++ b/src/main/resources/templates/fragments/leftpane.html
@@ -14,12 +14,8 @@
         <aside class="left-pane cas-brand-text">
             <!-- Logo and brand name -->
             <div class="left-pane-logo-wrapper">
-                <img class="cas-logo" src="/images/osf-logo-white.png" alt="OSF logo">
+                <img class="cas-logo" src="/images/osf-logo-white.svg" alt="OSF logo">
                 <div class="cas-brand-text">
-                    <a class="navbar-link" th:href="@{/login(casRedirectSource=tomcat)}">
-                        <span class="cas-brand-name hidden-narrow" >OSF</span>
-                    </a>
-                </div>
             </div>
             <nav class="left-pane-nav">
                 <ul class="left-pane-nav-list">
