Refactor leftpane to leftpaneosf

--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -25,8 +25,8 @@
         <a href="fragments/headerosf.html"></a>
     </div>
 
-    <div th:replace="fragments/leftpane :: leftpane">
-        <a href="fragments/leftpane.html"></a>
+    <div th:replace="fragments/leftpaneosf :: leftpaneosf">
+        <a href="fragments/leftpaneosf.html"></a>
     </div>
 
     <div class="mdc-drawer-scrim"></div>
